<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WorkoutApp</string>

    <string-array name="test_routines_array">
        <item>Routine 1</item>
        <item>Routine 2</item>
        <item>Routine 3</item>
    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_routines">Routines</string>
    <string name="menu_history">History</string>

    <!-- RecentWorkoutsFragment -->
    <string name="actionbar_recent_workouts_subtitle">Home</string>
    <string name="empty_routines_text">You have not created any routines</string>
    <string name="empty_routinedays_text">You have no completed or ongoing workout days in the selected routine</string>
    <string name="add_routine_button">Create first routine</string>
    <string name="new_routineday_dialog_title">Start new workout day?</string>
    <string name="new_routineday_dialog_message">There is an ongoing workout. Continuing without saving will override it.</string>
    <string name="new_routineday_dialog_checkbox">Save ongoing workout day</string>
    <string name="new_routineday_dialog_positive_button">Continue</string>
    <string name="new_routineday_dialog_negative_button">Cancel</string>

    <!-- RoutineListFragment -->
    <string name="right_chevron_description">Right chevron</string>
    <string name="actionbar_routine_list_subtitle">Routine List</string>

    <!-- RoutineHistoryFragment -->
    <string name="actionbar_routine_history_subtitle">History - %1$s</string>
    <string name="actionbar_routine_history_subtitle_empty">History</string>

    <!-- RoutineDayPageFragment -->
    <string name="routineday_done_text">Done</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="delete_routineday">Delete Workout Day</string>

    <!-- EditRoutineFragment-->
    <string name="actionbar_edit_routine_title">Edit Routine</string>
    <string name="delete_routine_dialog_title">Delete Routine?</string>
    <string name="delete_routine_dialog_message">Deleting the last remaining workout day in the routine will also delete the routine and any past saved workouts.</string>
    <string name="delete_routine_dialog_positive_button">Continue</string>
    <string name="delete_routine_dialog_negative_button">Cancel</string>

    <!-- NewExerciseFragment strings -->
    <string name="new_exercise_title">Add Exercise:</string>
    <string name="new_exercise_name_empty_error">Exercise name can\'t be empty</string>
    <string name="new_exercise_sets_empty_error">Must be a positive integer between 1 and %1$d inclusive</string>
    <string name="exercise_name_hint">Exercise Name</string>
    <string name="exercise_number_sets_hint">Number of sets</string>
    <string name="exercise_type_heading">Exercise Type </string>

    <!-- NewRoutineFragment strings -->
    <string name="new_routine_title">New Routine:</string>
    <string name="new_routine_name_empty_error">Routine name can\'t be empty</string>
    <string name="new_routine_name_exists_error">A routine with that name exists - must be unique</string>
    <string name="new_routine_days_empty_error">Must be a positive integer between 1 and %1$d inclusive</string>
    <string name="routine_name_hint">Routine Name</string>
    <string name="routine_number_days_hint">Number of days</string>

    <!-- Title for the DatePicker -->
    <string name="date_picker_title">Date of workout:</string>


</resources>
