<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/routine_history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/routine_history_empty_routines_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/mediumLightGray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_routines_text"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/routine_history_empty_routines_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_routine_button"/>

        </LinearLayout>

        <!-- The "Empty RoutineDay State Layer" that will be displayed when we have no routine days in a routine -->
        <LinearLayout
            android:id="@+id/routine_history_empty_routinedays_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/mediumLightGray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:text="@string/empty_routinedays_text"
                android:singleLine="false"
                android:textSize="20sp"
                android:textAlignment="center"/>

        </LinearLayout>

    </RelativeLayout>



</android.support.v4.widget.NestedScrollView>